--- a/Index.html
+++ b/Index.html
@@ -128,7 +128,7 @@
       <div class="col-lg-4 col-sm-6">
         <div class="project-section">
         <div class="project">
-          <img src="img/school1.jpg" alt="landing page" width="285px">
+          <img src="img/School1.jpg" alt="landing page" width="285px">
           <div class="content">
             <a href="#"  class="btn btn-sm btn-outline-light btn-brand">Welcome to our school</a>
           </div>
@@ -151,7 +151,7 @@
         <div class="row">
       <div class="col-lg-4 col-sm-6">
         <div class="project">
-          <img src="img/school3.jpg" alt="landing page" width="285px">
+          <img src="img/School3.jpg" alt="landing page" width="285px">
           <div class="content">
             <a href="#"  class="btn btn-sm btn-outline-light btn-brand">beautiful place</a>
           </div>
@@ -162,7 +162,7 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6">
         <div class="project">
-          <img src="img/school4.jpg" alt="landing page" width="285px">
+          <img src="img/School4.jpg" alt="landing page" width="285px">
           <div class="content">
             <a href="#"  class="btn btn-sm btn-outline-light btn-brand">fun activities</a>
           </div>
@@ -206,9 +206,13 @@ kamp.Durian Blok B No. 36, kec.Sadai kec.Bengkong-Batam city
         </div>
       </div>
     </div>
-    <section/>
+    </section>
  
  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+<script src="main.js"></script>
 </body>
 </html>
